@@ -2000,23 +2000,24 @@ sub ExpandAbbreviationsCallback {
     # We are outside any CDATA or <programlisting> sections, so we expand
     # any gtk-doc abbreviations.
 
-    # Convert 'function()' or 'macro()'
+    # Convert 'function()' or 'macro()'.
     $text =~ s/(\w+)\s*\(\)/&MakeXRef($1, &tagify($1 . "()", "function"));/eg;
 
-    # Convert '@param'
+    # Convert '@param', but not '\@param'.
     #$text =~ s/\@(\w+((\.|->)\w+)*)/<parameter>$1<\/parameter>/g;
-    $text =~ s/[^\\]\@(\w+((\.|->)\w+)*)/<parameter>$1<\/parameter>/g;
-    $text =~ s/\\\@(\w+((\.|->)\w+)*)/\@$1/g;
+    $text =~ s/([^\\])\@(\w+((\.|->)\w+)*)/$1<parameter>$2<\/parameter>/g;
+    $text =~ s/\\\@/\@/g;
 
-    # Convert '%constant'. Also allow negative numbers, e.g. %-1.
+    # Convert '%constant', but not '\%constant'.
+    # Also allow negative numbers, e.g. %-1.
     #$text =~ s/\%(-?\w+)/&MakeXRef($1, &tagify($1, "literal"));/eg;
-    $text =~ s/[^\\]\%(-?\w+)/&MakeXRef($1, &tagify($1, "literal"));/eg;
-    $text =~ s/\\\%(-?\w+)/\%$1/g;
+    $text =~ s/([^\\])\%(-?\w+)/$1.&MakeXRef($2, &tagify($2, "literal"));/eg;
+    $text =~ s/\\\%/\%/g;
 
-    # Convert '#symbol'
+    # Convert '#symbol', but not '\#symbol'.
     #$text =~ s/#([\w\-:]+)/&MakeHashXRef($1, "type");/eg;
-    $text =~ s/[^\\]#([\w\-:]+)/&MakeHashXRef($1, "type");/eg;
-    $text =~ s/\\#([\w\-:]+)/#$1/g;
+    $text =~ s/([^\\])#([\w\-:]+)/$1.&MakeHashXRef($2, "type");/eg;
+    $text =~ s/\\#/#/g;
   }
 
   return $text;
